compiler/src/test/resources/golden/errors/trait_no_impl.dawn
trait Ord2[T] {
  fn cmp2(a: T, b: T) -> Int
}

type Point = { x: Int, y: Int }

fn f(p: Point, q: Point) -> Int = cmp2(p, q)

pub fn main() -> Unit !io = println("x")
