compiler/src/test/resources/golden/errors/trait_no_impl.err
error: no impl of `Ord2` for `Point`
  --> trait_no_impl.dawn:7:35
  |
7 | fn f(p: Point, q: Point) -> Int = cmp2(p, q)
  |                                   ^^^^
  = hint: define `impl Ord2[Point] { ... }` in the module declaring `Point` or `Ord2`
